# fpologo

./: .gitignore  .pre-commit-config.yaml  README.md  output-config.yaml  requirements.txt  setup.cfg
src/fpologo/: fpologo.py
src/fpologo_snydez.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
