[metadata]
name = fpologo-snydez
version = 0.0.1
author = Zach Snyder
author_email = sadin@fedoraproject.org
description = library for generating SVG logos for fedora
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sadin/fpologo
project_urls =
    Bug Tracker = https://github.com/Sadin/fpologo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
